--- a/EJ3/noticias/noticia1.html
+++ b/EJ3/noticias/noticia1.html
@@ -8,5 +8,27 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    
+    <header>
+        <h1>IES VELÁZQUEZ</h1>
+    </header>
+    <main>
+        <section>
+            <h2> Noticias</h2>
+            <article id="art1">
+                <a id="not1"></a>
+                <div id="div_not_1">    
+                    <p class="Titulos">Entrega de notas</p>
+                    <p>El día 25 de marzo</p>
+                    <img src="../images/notas.jpeg" alt="foto1">
+                </div>
+                <p id="p_not1">1 comentario</p>
+            </article>
+        </section>
+        <a href="../index.html#not1"><img src="../buttons/return.png" alt="Botón vuelta"></a>
+    </main>
+    <footer>
+        <P>Siguenos en nuestras redes</P>
+        <img src="../images/redes.jpeg" alt="Redes" width="150" height="50"><br>
+        IES VELÁZQUEZ
+    </footer>
 </body>
