--- a/EJ3/noticias/noticia3.html
+++ b/EJ3/noticias/noticia3.html
@@ -8,5 +8,27 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    
+    <header>
+        <h1>IES VELÁZQUEZ</h1>
+    </header>
+    <main>
+        <section>
+            <h2> Noticias</h2>
+            <article id="art3">
+                <a id="not3"></a>
+                <div id="div_not_3">    
+                    <p class="Titulos">Vacaciones de verano</p>
+                    <p>el día 23 de junio....</p>
+                    <img src="../images/vacaciones.jpeg" alt="foto1" width="500" height="500">
+                </div>
+                <p id="p_not3">5 comentario</p>
+            </article>
+        </section>
+        <a href="../index.html#not3"><img src="../buttons/return.png" alt="Botón vuelta"></a>
+    </main>
+    <footer>
+        <P>Siguenos en nuestras redes</P>
+        <img src="../images/redes.jpeg" alt="Redes" width="150" height="50"><br>
+        IES VELÁZQUEZ
+    </footer>
 </body>
